[gd_scene load_steps=11 format=2]

[ext_resource path="res://theme/kenny/kenneyUI-blue.tres" type="Theme" id=1]
[ext_resource path="res://picture/close.png" type="Texture" id=2]
[ext_resource path="res://picture/close_hover.png" type="Texture" id=3]
[ext_resource path="res://new_game/newgame.gd" type="Script" id=4]
[ext_resource path="res://theme/kenny/kenneyUI-yellow.tres" type="Theme" id=5]
[ext_resource path="res://settings/player1.gd" type="Script" id=6]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 240, 110 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 240, -525 ), Vector2( 240, 110 ) ]
}

[node name="NewGame" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 240.0
margin_top = 110.0
margin_right = 1040.0
margin_bottom = 610.0
theme = ExtResource( 1 )

[node name="Close" type="TextureButton" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -23.0
margin_top = -11.5
margin_right = 13.0
margin_bottom = 24.5
focus_neighbour_left = NodePath("../VBox/Continue")
focus_neighbour_bottom = NodePath("../VBox/Continue")
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )

[node name="Container" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -194.0
margin_right = 271.0
margin_bottom = 118.0
theme = ExtResource( 5 )

[node name="P1" type="VBoxContainer" parent="Panel/Container"]
margin_right = 521.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Player1" type="Label" parent="Panel/Container/P1"]
margin_right = 521.0
margin_bottom = 33.0
text = "Player1"
align = 1

[node name="Role" type="HBoxContainer" parent="Panel/Container/P1"]
margin_top = 37.0
margin_right = 521.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( -536, 50 )

[node name="Human" type="Button" parent="Panel/Container/P1/Role"]
margin_right = 258.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Human"

[node name="Computer" type="Button" parent="Panel/Container/P1/Role"]
margin_left = 262.0
margin_right = 521.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Computer"

[node name="Level" type="HBoxContainer" parent="Panel/Container/P1"]
visible = false
margin_top = 98.0
margin_right = 521.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( -536, 50 )
custom_constants/separation = 8

[node name="PlaceHolder" type="Control" parent="Panel/Container/P1/Level"]
margin_right = 245.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Computer" type="HSlider" parent="Panel/Container/P1/Level"]
margin_left = 253.0
margin_right = 445.0
margin_bottom = 42.0
size_flags_vertical = 3
max_value = 2.0
value = 1.0

[node name="Label" type="Label" parent="Panel/Container/P1/Level"]
margin_left = 453.0
margin_top = 4.0
margin_right = 555.0
margin_bottom = 37.0
text = "Lv2"

[node name="P2" type="VBoxContainer" parent="Panel/Container"]
margin_top = 158.0
margin_right = 521.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Player2" type="Label" parent="Panel/Container/P2"]
margin_right = 521.0
margin_bottom = 33.0
text = "Player2"
align = 1

[node name="Role" type="HBoxContainer" parent="Panel/Container/P2"]
margin_top = 37.0
margin_right = 521.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( -536, 50 )

[node name="Human" type="Button" parent="Panel/Container/P2/Role"]
margin_right = 258.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Human"

[node name="Computer" type="Button" parent="Panel/Container/P2/Role"]
margin_left = 262.0
margin_right = 521.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 2 )
text = "Computer"

[node name="Level" type="HBoxContainer" parent="Panel/Container/P2"]
visible = false
margin_top = 98.0
margin_right = 521.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( -536, 50 )
custom_constants/separation = 8

[node name="PlaceHolder" type="Control" parent="Panel/Container/P2/Level"]
margin_right = 245.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Computer" type="HSlider" parent="Panel/Container/P2/Level"]
margin_left = 253.0
margin_right = 445.0
margin_bottom = 42.0
size_flags_vertical = 3
max_value = 2.0
value = 1.0

[node name="Label" type="Label" parent="Panel/Container/P2/Level"]
margin_left = 453.0
margin_top = 4.0
margin_right = 555.0
margin_bottom = 37.0
text = "Lv2"

[node name="HBox" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -84.5
margin_right = 150.0
margin_bottom = -27.5
rect_pivot_offset = Vector2( -536, 50 )
theme = ExtResource( 5 )
custom_constants/separation = 25

[node name="Cancel" type="Button" parent="Panel/HBox"]
margin_right = 137.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"

[node name="Ok" type="Button" parent="Panel/HBox"]
margin_left = 162.0
margin_right = 300.0
margin_bottom = 57.251
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
anims/RESET = SubResource( 4 )
anims/slide = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Panel/Close" to="." method="do_hide"]
[connection signal="pressed" from="Panel/Container/P1/Role/Human" to="Panel/Container/P1" method="_on_Human_pressed"]
[connection signal="pressed" from="Panel/Container/P1/Role/Computer" to="Panel/Container/P1" method="_on_Computer_pressed"]
[connection signal="value_changed" from="Panel/Container/P1/Level/Computer" to="Panel/Container/P1" method="_on_Computer_value_changed"]
[connection signal="pressed" from="Panel/Container/P2/Role/Human" to="Panel/Container/P2" method="_on_Human_pressed"]
[connection signal="pressed" from="Panel/Container/P2/Role/Computer" to="Panel/Container/P2" method="_on_Computer_pressed"]
[connection signal="value_changed" from="Panel/Container/P2/Level/Computer" to="Panel/Container/P2" method="_on_Computer_value_changed"]
[connection signal="pressed" from="Panel/HBox/Cancel" to="." method="do_hide"]
[connection signal="pressed" from="Panel/HBox/Ok" to="." method="_on_new_game_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
